k8s/istio/gateway.yml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: imageprocessing-gateway
  namespace: imageprocessing
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "api.imageprocessing.local"
        - "keycloak.imageprocessing.local"
