k8s/istio/destinationrule-frontend.yml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: frontend-destination
  namespace: imageprocessing
spec:
  host: frontend-service
  trafficPolicy:
    connectionPool:
      http:
        idleTimeout: 15s
