k8s/istio/destinationrule-orchetrator.yml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: orchestrator-destination
  namespace: imageprocessing
spec:
  host: orchestrator-service
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 50
      http:
        http1MaxPendingRequests: 20
        maxRequestsPerConnection: 10
    outlierDetection:
      consecutive5xxErrors: 5
      interval: 10s
      baseEjectionTime: 30s
      maxEjectionPercent: 100
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
