k8s/istio/virtualservice-bootstrap.yml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: gateway-passthrough
  namespace: imageprocessing
spec:
  hosts:
    - "api.imageprocessing.local"
  gateways:
    - imageprocessing-gateway
  http:
    - route:
        - destination:
            host: frontend-service
            port:
              number: 8080
      timeout: 8s
      retries:
        attempts: 1
        perTryTimeout: 4s
        retryOn: 5xx,reset,connect-failure
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: keycloak-passthrough
  namespace: imageprocessing
spec:
  hosts:
    - "keycloak.imageprocessing.local"
  gateways:
    - imageprocessing-gateway
  http:
    - route:
        - destination:
            host: keycloak
            port:
              number: 8080
      # also add these? check retry on
      timeout: 8s
      retries:
        attempts: 1
        perTryTimeout: 4s
        retryOn: 5xx,reset,connect-failure
