k8s/istio/virtualservice-orchestrator.yml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: orchestrator-internal
  namespace: imageprocessing
spec:
  hosts:
    - orchestrator-service
  http:
    - route:
        - destination:
            host: orchestrator-service
            subset: v1
            port:
              number: 8080
          weight: 70
        - destination:
            host: orchestrator-service
            subset: v2
            port:
              number: 8080
          weight: 30
      timeout: 5s
      retries:
        attempts: 2
        perTryTimeout: 2s
        retryOn: 5xx,reset,connect-failure
